# RocketBot

./: Cargo.toml  README.md  config.env  sample.env
src/: bot.rs  main.rs  utils.rs
