[package]
name = "rocketbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.0", features = ["derive"]}
reqwest = {version = "0.11", features = ["blocking"]}
serde_json = "1.0"
regex = "1.5"
markdown = "0.3"
urlencoding = "2.1"
